[project]
name = "messaging-broker-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "websockets>=14.2",
]

[project.scripts]
server = "messaging_broker_system:server"
client = "messaging_broker_system:client"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
